Adicionei um parágrafo

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestiae maiores maxime culpa accusamus corrupti porro ab! Nostrum dignissimos laboriosam, error sequi corporis id in ducimus placeat voluptatum totam delectus quisquam.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores aperiam fugit, numquam molestiae necessitatibus laborum, hic aspernatur eligendi repellat autem obcaecati perferendis nulla aliquam quos odit ut, ex temporibus natus.</p>
 </body>
 </html>
